Add optional support for rel=preload|prefetch for CSS includes (#4)