@@ -19,12 +19,10 @@
  */
 package io.wcm.wcm.ui.clientlibs.components;
 
-import java.util.Arrays;
-import java.util.HashSet;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.TreeMap;
 
 import javax.annotation.PostConstruct;
 
@@ -51,13 +49,13 @@ import com.adobe.granite.ui.clientlibs.LibraryType;
 @ProviderType
 public class JSInclude {
 
-  private static final Set<String> CROSSORIGIN_ALLOWED_VALUES = new HashSet<>(Arrays.asList(
-      "anonymous", "use-credentials"));
-  private static final Set<String> REFERRERPOLICY_ALLOWED_VALUES = new HashSet<>(Arrays.asList(
+  private static final Set<String> CROSSORIGIN_ALLOWED_VALUES = Set.of(
+      "anonymous", "use-credentials");
+  private static final Set<String> REFERRERPOLICY_ALLOWED_VALUES = Set.of(
       "no-referrer", "no-referrer-when-downgrade", "origin", "origin-when-cross-origin",
-      "same-origin", "strict-origin", "strict-origin-when-cross-origin", "unsafe-url"));
-  private static final Set<String> TYPE_ALLOWED_VALUES = new HashSet<>(Arrays.asList(
-      "text/javascript", "module"));
+      "same-origin", "strict-origin", "strict-origin-when-cross-origin", "unsafe-url");
+  private static final Set<String> TYPE_ALLOWED_VALUES = Set.of(
+      "text/javascript", "module");
 
   @SlingObject
   private ResourceResolver resourceResolver;
@@ -107,11 +105,11 @@ public class JSInclude {
    * @return Map with attribute for script tag
    */
   private @NotNull Map<String, String> validateAndBuildAttributes() {
-    Map<String, String> attrs = new TreeMap<>();
+    Map<String, String> attrs = new HashMap<>();
     if (async) {
       attrs.put("async", null);
     }
-    if (CROSSORIGIN_ALLOWED_VALUES.contains(crossorigin)) {
+    if (crossorigin != null && CROSSORIGIN_ALLOWED_VALUES.contains(crossorigin)) {
       attrs.put("crossorigin", crossorigin);
     }
     if (defer) {
@@ -126,10 +124,10 @@ public class JSInclude {
     if (StringUtils.isNotEmpty(nonce)) {
       attrs.put("nonce", xssApi.encodeForHTMLAttr(nonce));
     }
-    if (REFERRERPOLICY_ALLOWED_VALUES.contains(referrerpolicy)) {
+    if (referrerpolicy != null && REFERRERPOLICY_ALLOWED_VALUES.contains(referrerpolicy)) {
       attrs.put("referrerpolicy", referrerpolicy);
     }
-    if (TYPE_ALLOWED_VALUES.contains(type)) {
+    if (type != null && TYPE_ALLOWED_VALUES.contains(type)) {
       attrs.put("type", type);
     }
     return attrs;
@@ -144,17 +142,10 @@ public class JSInclude {
   private @NotNull String buildIncludeString(@NotNull List<String> libraryPaths, @NotNull Map<String, String> attrs) {
     StringBuilder markup = new StringBuilder();
     for (String libraryPath : libraryPaths) {
-      markup.append("<script src=\"").append(xssApi.encodeForHTMLAttr(libraryPath)).append("\"");
-      for (Map.Entry<String, String> attr : attrs.entrySet()) {
-        markup.append(" ");
-        markup.append(attr.getKey());
-        if (attr.getValue() != null) {
-          markup.append("=\"");
-          markup.append(attr.getValue());
-          markup.append("\"");
-        }
-      }
-      markup.append("></script>\n");
+      HtmlTagBuilder builder = new HtmlTagBuilder("script", true, xssApi);
+      builder.setAttrs(attrs);
+      builder.setAttr("src", libraryPath);
+      markup.append(builder.build());
     }
     return markup.toString();
   }
